--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^24.10.0",
     "keyv": "^5.5.3",
+    "p-queue": "^9.0.0",
     "typescript": "^5.9.3"
   }
 }
