--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "test": "node ./test.ts",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "keyv": "^5.5.3",
+    "p-queue": "^9.0.0"
+  },
   "devDependencies": {
     "@types/node": "^24.10.0",
-    "keyv": "^5.5.3",
-    "p-queue": "^9.0.0",
     "typescript": "^5.9.3"
   }
 }
